# transcription_friend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP.md  config.py  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  gpu-diagnostics.md  lint-fixer.md  test-runner.md  transcription-runner.md
.claude/commands/: fix-lint.md  lint.md  review-pr.md  test.md
.claude/skills/python-quality/: SKILL.md  SKILL_TEMPLATE.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/whisper-transcription/: SKILL.md  reference.md
.claude/skills/whisper-transcription/scripts/: batch_transcribe.py
.github/: pull_request_template.md
.github/workflows/: lint.yml  pages.yml  test.yml
context-engineering/: 2025-11-13-linting-issues.md  2025-11-13-network-loading-skill-suggestions.md  2025-11-13-python-quality-skill-analysis.md
docs/: index.html
scripts/: cleanup_originals.py  extract_audio.py  install.ps1  install.sh  postprocess.py  transcribe.py  web_api.py
tests/: test_cleanup.py  test_config.py  test_corrections.py  test_cuda_only.py  test_gpu_small.py  test_postprocess.py  test_postprocess_helpers.py  test_web_api.py  test_whisper_helpers.py
utils/: __init__.py  corrections.py  whisper_helpers.py
